overflow fix

--- a/src/pages/deviceselection/DeviceSelection.scss
+++ b/src/pages/deviceselection/DeviceSelection.scss
@@ -72,7 +72,7 @@
       min-height: 60px;
       position: relative;
       text-align: center;
-      overflow: auto;
+      overflow: hidden;
 
       &__image {
         grid-area: image;
